fix(condo): DOMA-5955 fixed flickering

--- a/packages/ui/src/components/Card/style.less
+++ b/packages/ui/src/components/Card/style.less
@@ -53,11 +53,11 @@
     box-shadow: @condo-global-box-shadow-active;
 
     .condo-card-body {
-      border: none;
+      border: 0 solid transparent;
     }
 
     .condo-card-head {
-      border: none;
+      border: 0 solid transparent;
       border-bottom: @condo-global-border-width-default solid @condo-global-color-gray-3;
     }
   }
